# visionforge-ai

./: .gitignore  Makefile  README.md  package.json
backend/: .env.example  Makefile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py  vision.py
backend/app/api/routes/: health.py  realtime.py  vision.py
backend/app/core/: config.py  middleware.py
backend/app/integrations/: openai_vision_client.py
backend/app/schemas/: realtime.py  vision.py
backend/app/services/: live_stream_service.py  realtime_manager.py  storage_service.py  streaming_service.py  vision_service.py  yolo_service.py
backend/tests/: test_health.py  test_live_endpoints.py  test_openai_adapter.py  test_vision_routes.py  test_vision_service_ai.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  BACKEND_API.md  SETUP.md
frontend/: .env.example  .env.production.example  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/blog/: page.tsx
frontend/components/: AgentStreamPanel.tsx  BoundingBoxOverlay.tsx
frontend/components/home/: agent-studio.tsx  featured.tsx  features-grid.tsx  hero.tsx  live-agent-feed.tsx  live-vision-lab.tsx  mission.tsx  testimonials.tsx
frontend/lib/: ai-client.ts
frontend/tests/: agent-studio.test.tsx  live-agent-feed.test.tsx
scripts/: smoke.ps1
